SAMC/StaadConverter/StaadReader/StaadParserParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from StaadParser.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class StaadParserParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, COMMENT=24, 
		INTIGER=25, DOUBLE=26, SEMICOLON=27, WHITESPACE=28, NEWLINE=29, NUMBER=30, 
		TEXT=31, ANY=32;
	public const int
		RULE_file = 0, RULE_section = 1, RULE_other = 2, RULE_load_inner_section = 3, 
		RULE_joint_load_section = 4, RULE_element_load_section = 5, RULE_member_load_section = 6, 
		RULE_joint_load_row = 7, RULE_newline_or_white_space = 8, RULE_generic_row = 9, 
		RULE_material_definition = 10, RULE_material_property = 11, RULE_semi_colon_separated_section_content = 12, 
		RULE_semi_colon_separated_row = 13, RULE_material_assignment_row = 14, 
		RULE_material_assignment_row_value = 15, RULE_section_definition_section_content = 16, 
		RULE_section_definition_row = 17, RULE_assignment_definition = 18, RULE_load_combination_row = 19, 
		RULE_load_combination_row_data = 20, RULE_id_definition_list = 21, RULE_id_definition = 22, 
		RULE_range = 23, RULE_row_data_separator = 24, RULE_data = 25;
	public static readonly string[] ruleNames = {
		"file", "section", "other", "load_inner_section", "joint_load_section", 
		"element_load_section", "member_load_section", "joint_load_row", "newline_or_white_space", 
		"generic_row", "material_definition", "material_property", "semi_colon_separated_section_content", 
		"semi_colon_separated_row", "material_assignment_row", "material_assignment_row_value", 
		"section_definition_section_content", "section_definition_row", "assignment_definition", 
		"load_combination_row", "load_combination_row_data", "id_definition_list", 
		"id_definition", "range", "row_data_separator", "data"
	};

	private static readonly string[] _LiteralNames = {
		null, "'UNIT'", "'JOINT COORDINATES'", "'MEMBER INCIDENCES'", "'ELEMENT INCIDENCES SHELL'", 
		"'DEFINE MATERIAL START'", "'END DEFINE MATERIAL'", "'ELEMENT PROPERTY'", 
		"'MEMBER PROPERTY'", "'CONSTANTS'", "'SUPPORTS'", "'LOAD'", "'LOAD COMB'", 
		"'JOINT LOAD'", "'ELEMENT LOAD'", "'MEMBER LOAD'", "'ISOTROPIC'", "'ALL'", 
		"'MEMB'", "'TO'", "'-'", "' AMERICAN'", "'MATERIAL'", "'BETA'", null, 
		null, null, "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"COMMENT", "INTIGER", "DOUBLE", "SEMICOLON", "WHITESPACE", "NEWLINE", 
		"NUMBER", "TEXT", "ANY"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "StaadParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static StaadParserParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public StaadParserParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public StaadParserParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class FileContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(StaadParserParser.Eof, 0); }
		public ITerminalNode[] TEXT() { return GetTokens(StaadParserParser.TEXT); }
		public ITerminalNode TEXT(int i) {
			return GetToken(StaadParserParser.TEXT, i);
		}
		public ITerminalNode[] WHITESPACE() { return GetTokens(StaadParserParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(StaadParserParser.WHITESPACE, i);
		}
		public Newline_or_white_spaceContext[] newline_or_white_space() {
			return GetRuleContexts<Newline_or_white_spaceContext>();
		}
		public Newline_or_white_spaceContext newline_or_white_space(int i) {
			return GetRuleContext<Newline_or_white_spaceContext>(i);
		}
		public SectionContext[] section() {
			return GetRuleContexts<SectionContext>();
		}
		public SectionContext section(int i) {
			return GetRuleContext<SectionContext>(i);
		}
		public OtherContext[] other() {
			return GetRuleContexts<OtherContext>();
		}
		public OtherContext other(int i) {
			return GetRuleContext<OtherContext>(i);
		}
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		public override void EnterRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.EnterFile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.ExitFile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStaadParserVisitor<TResult> typedVisitor = visitor as IStaadParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 57;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					State = 55;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
					case 1:
						{
						State = 52; Match(TEXT);
						}
						break;
					case 2:
						{
						State = 53; Match(WHITESPACE);
						}
						break;
					case 3:
						{
						State = 54; newline_or_white_space();
						}
						break;
					}
					} 
				}
				State = 59;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			State = 62;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					State = 62;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
					case 1:
						{
						State = 60; section();
						}
						break;
					case 2:
						{
						State = 61; other();
						}
						break;
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 64;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			State = 70;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHITESPACE) | (1L << NEWLINE) | (1L << TEXT))) != 0)) {
				{
				State = 68;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case TEXT:
					{
					State = 66; Match(TEXT);
					}
					break;
				case WHITESPACE:
				case NEWLINE:
					{
					State = 67; newline_or_white_space();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 72;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 73; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SectionContext : ParserRuleContext {
		public SectionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_section; } }
	 
		public SectionContext() { }
		public virtual void CopyFrom(SectionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class UnitsSectionContext : SectionContext {
		public DataContext[] data() {
			return GetRuleContexts<DataContext>();
		}
		public DataContext data(int i) {
			return GetRuleContext<DataContext>(i);
		}
		public ITerminalNode[] WHITESPACE() { return GetTokens(StaadParserParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(StaadParserParser.WHITESPACE, i);
		}
		public Newline_or_white_spaceContext[] newline_or_white_space() {
			return GetRuleContexts<Newline_or_white_spaceContext>();
		}
		public Newline_or_white_spaceContext newline_or_white_space(int i) {
			return GetRuleContext<Newline_or_white_spaceContext>(i);
		}
		public UnitsSectionContext(SectionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.EnterUnitsSection(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.ExitUnitsSection(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStaadParserVisitor<TResult> typedVisitor = visitor as IStaadParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnitsSection(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AreaElementsSectionContext : SectionContext {
		public Semi_colon_separated_section_contentContext semi_colon_separated_section_content() {
			return GetRuleContext<Semi_colon_separated_section_contentContext>(0);
		}
		public Newline_or_white_spaceContext[] newline_or_white_space() {
			return GetRuleContexts<Newline_or_white_spaceContext>();
		}
		public Newline_or_white_spaceContext newline_or_white_space(int i) {
			return GetRuleContext<Newline_or_white_spaceContext>(i);
		}
		public AreaElementsSectionContext(SectionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.EnterAreaElementsSection(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.ExitAreaElementsSection(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStaadParserVisitor<TResult> typedVisitor = visitor as IStaadParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAreaElementsSection(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LoadComboSectionContext : SectionContext {
		public ITerminalNode INTIGER() { return GetToken(StaadParserParser.INTIGER, 0); }
		public ITerminalNode[] WHITESPACE() { return GetTokens(StaadParserParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(StaadParserParser.WHITESPACE, i);
		}
		public DataContext[] data() {
			return GetRuleContexts<DataContext>();
		}
		public DataContext data(int i) {
			return GetRuleContext<DataContext>(i);
		}
		public Newline_or_white_spaceContext[] newline_or_white_space() {
			return GetRuleContexts<Newline_or_white_spaceContext>();
		}
		public Newline_or_white_spaceContext newline_or_white_space(int i) {
			return GetRuleContext<Newline_or_white_spaceContext>(i);
		}
		public Load_combination_rowContext[] load_combination_row() {
			return GetRuleContexts<Load_combination_rowContext>();
		}
		public Load_combination_rowContext load_combination_row(int i) {
			return GetRuleContext<Load_combination_rowContext>(i);
		}
		public LoadComboSectionContext(SectionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.EnterLoadComboSection(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.ExitLoadComboSection(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStaadParserVisitor<TResult> typedVisitor = visitor as IStaadParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLoadComboSection(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PointsSectionContext : SectionContext {
		public Semi_colon_separated_section_contentContext semi_colon_separated_section_content() {
			return GetRuleContext<Semi_colon_separated_section_contentContext>(0);
		}
		public Newline_or_white_spaceContext[] newline_or_white_space() {
			return GetRuleContexts<Newline_or_white_spaceContext>();
		}
		public Newline_or_white_spaceContext newline_or_white_space(int i) {
			return GetRuleContext<Newline_or_white_spaceContext>(i);
		}
		public PointsSectionContext(SectionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.EnterPointsSection(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.ExitPointsSection(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStaadParserVisitor<TResult> typedVisitor = visitor as IStaadParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPointsSection(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FrameElementsSectionContext : SectionContext {
		public Semi_colon_separated_section_contentContext semi_colon_separated_section_content() {
			return GetRuleContext<Semi_colon_separated_section_contentContext>(0);
		}
		public Newline_or_white_spaceContext[] newline_or_white_space() {
			return GetRuleContexts<Newline_or_white_spaceContext>();
		}
		public Newline_or_white_spaceContext newline_or_white_space(int i) {
			return GetRuleContext<Newline_or_white_spaceContext>(i);
		}
		public FrameElementsSectionContext(SectionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.EnterFrameElementsSection(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.ExitFrameElementsSection(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStaadParserVisitor<TResult> typedVisitor = visitor as IStaadParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFrameElementsSection(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FrameElementsSectionsSectionContext : SectionContext {
		public Section_definition_section_contentContext section_definition_section_content() {
			return GetRuleContext<Section_definition_section_contentContext>(0);
		}
		public ITerminalNode[] WHITESPACE() { return GetTokens(StaadParserParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(StaadParserParser.WHITESPACE, i);
		}
		public DataContext data() {
			return GetRuleContext<DataContext>(0);
		}
		public ITerminalNode[] NEWLINE() { return GetTokens(StaadParserParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(StaadParserParser.NEWLINE, i);
		}
		public FrameElementsSectionsSectionContext(SectionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.EnterFrameElementsSectionsSection(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.ExitFrameElementsSectionsSection(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStaadParserVisitor<TResult> typedVisitor = visitor as IStaadParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFrameElementsSectionsSection(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MaterialSectionContext : SectionContext {
		public Newline_or_white_spaceContext[] newline_or_white_space() {
			return GetRuleContexts<Newline_or_white_spaceContext>();
		}
		public Newline_or_white_spaceContext newline_or_white_space(int i) {
			return GetRuleContext<Newline_or_white_spaceContext>(i);
		}
		public Material_definitionContext[] material_definition() {
			return GetRuleContexts<Material_definitionContext>();
		}
		public Material_definitionContext material_definition(int i) {
			return GetRuleContext<Material_definitionContext>(i);
		}
		public ITerminalNode[] WHITESPACE() { return GetTokens(StaadParserParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(StaadParserParser.WHITESPACE, i);
		}
		public MaterialSectionContext(SectionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.EnterMaterialSection(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.ExitMaterialSection(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStaadParserVisitor<TResult> typedVisitor = visitor as IStaadParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMaterialSection(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MaterialAssignmentSectionContext : SectionContext {
		public Newline_or_white_spaceContext[] newline_or_white_space() {
			return GetRuleContexts<Newline_or_white_spaceContext>();
		}
		public Newline_or_white_spaceContext newline_or_white_space(int i) {
			return GetRuleContext<Newline_or_white_spaceContext>(i);
		}
		public Material_assignment_rowContext[] material_assignment_row() {
			return GetRuleContexts<Material_assignment_rowContext>();
		}
		public Material_assignment_rowContext material_assignment_row(int i) {
			return GetRuleContext<Material_assignment_rowContext>(i);
		}
		public MaterialAssignmentSectionContext(SectionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.EnterMaterialAssignmentSection(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.ExitMaterialAssignmentSection(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStaadParserVisitor<TResult> typedVisitor = visitor as IStaadParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMaterialAssignmentSection(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BoundaryConditionsSectionContext : SectionContext {
		public Newline_or_white_spaceContext[] newline_or_white_space() {
			return GetRuleContexts<Newline_or_white_spaceContext>();
		}
		public Newline_or_white_spaceContext newline_or_white_space(int i) {
			return GetRuleContext<Newline_or_white_spaceContext>(i);
		}
		public Generic_rowContext[] generic_row() {
			return GetRuleContexts<Generic_rowContext>();
		}
		public Generic_rowContext generic_row(int i) {
			return GetRuleContext<Generic_rowContext>(i);
		}
		public BoundaryConditionsSectionContext(SectionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.EnterBoundaryConditionsSection(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.ExitBoundaryConditionsSection(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStaadParserVisitor<TResult> typedVisitor = visitor as IStaadParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBoundaryConditionsSection(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AreaElementsSectionsSectionContext : SectionContext {
		public Section_definition_section_contentContext section_definition_section_content() {
			return GetRuleContext<Section_definition_section_contentContext>(0);
		}
		public Newline_or_white_spaceContext[] newline_or_white_space() {
			return GetRuleContexts<Newline_or_white_spaceContext>();
		}
		public Newline_or_white_spaceContext newline_or_white_space(int i) {
			return GetRuleContext<Newline_or_white_spaceContext>(i);
		}
		public AreaElementsSectionsSectionContext(SectionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.EnterAreaElementsSectionsSection(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.ExitAreaElementsSectionsSection(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStaadParserVisitor<TResult> typedVisitor = visitor as IStaadParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAreaElementsSectionsSection(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LoadCaseSectionContext : SectionContext {
		public ITerminalNode INTIGER() { return GetToken(StaadParserParser.INTIGER, 0); }
		public ITerminalNode[] WHITESPACE() { return GetTokens(StaadParserParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(StaadParserParser.WHITESPACE, i);
		}
		public DataContext[] data() {
			return GetRuleContexts<DataContext>();
		}
		public DataContext data(int i) {
			return GetRuleContext<DataContext>(i);
		}
		public Newline_or_white_spaceContext[] newline_or_white_space() {
			return GetRuleContexts<Newline_or_white_spaceContext>();
		}
		public Newline_or_white_spaceContext newline_or_white_space(int i) {
			return GetRuleContext<Newline_or_white_spaceContext>(i);
		}
		public Load_inner_sectionContext[] load_inner_section() {
			return GetRuleContexts<Load_inner_sectionContext>();
		}
		public Load_inner_sectionContext load_inner_section(int i) {
			return GetRuleContext<Load_inner_sectionContext>(i);
		}
		public LoadCaseSectionContext(SectionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.EnterLoadCaseSection(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStaadParserListener typedListener = listener as IStaadParserListener;
			if (typedListener != null) typedListener.ExitLoadCaseSection(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStaadParserVisitor<TResult> typedVisitor = visitor as IStaadParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLoadCaseSection(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SectionContext section() {
		SectionContext _localctx = new SectionContext(Context, State);
		EnterRule(_localctx, 2, RULE_section);
		int _la;
		try {
			int _alt;
			State = 237;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				_localctx = new UnitsSectionContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 75; Match(T__0);
				State = 77;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 76; Match(WHITESPACE);
					}
					}
					State = 79;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==WHITESPACE );
				State = 81; data();
				State = 83;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 82; Match(WHITESPACE);
					}
					}
					State = 85;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==WHITESPACE );
				State = 87; data();
				State = 89;
				ErrorHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						State = 88; newline_or_white_space();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 91;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case T__1:
				_localctx = new PointsSectionContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 93; Match(T__1);
				State = 95;
				ErrorHandler.Sync(this);
